# SQL-zadania-powtorkowe

./: .gitignore  README.md  pyproject.toml
src/sqlpowtorka/: przygotowanie.py  zestaw1.py  zestaw2.py  zestaw3.py
tests/: test_przygotowanie.py
