[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sql_zadania_powtorkowe"
version = "1.0.0"
authors = [
  {name = "Krzysztof Barczak", email = "author@example.com"},
]
maintainers = [
  {name = "Krzysztof Barczak", email = "author@example.com"}
]
description = "jak w tytule"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["sql", "exercises"]
classifiers = [
    "Private :: Do Not Upload", # prevents uploading to pypi
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
]

[project.optional-dependencies]
pdf = ["ReportLab>=1.2", "RXP"]
rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[projects.urls]
Homepage = "https://github.com/pypa/sampleproject"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/example.git"
